--- a/PROTOTIPOS/Prototipo1/style.css
+++ b/PROTOTIPOS/Prototipo1/style.css
@@ -4,13 +4,26 @@ body{
 
 h1{
     justify-content: center;
-    margin-left: 30%;
+    padding-right: 30%;
     margin-right: 30%;
+    font-size: 300%;
+    font-family: Arial, Helvetica, sans-serif;
+
 }
 
 h3{
     justify-content: center;
-    font-family: 'MiFuente';
-    src: url() format(), 
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 100%;
+    padding-right: 50%;
+
+}
+
+.foto1{
+    border: 2px solid brown;
+    display: flex;
+    width: 400px;
+    border-radius: 10px;
+    
     
 }
