--- a/PROTOTIPOS/Prototipo1/style.css
+++ b/PROTOTIPOS/Prototipo1/style.css
@@ -1,29 +1,95 @@
-body{
-    margin: 0%;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-h1{
+body {
+    background-color: #bbbaba;
+    display: flex;
     justify-content: center;
-    padding-right: 30%;
-    margin-right: 30%;
-    font-size: 300%;
-    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    height: 100vh;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 
+.tarjeta{
+    box-sizing: border-box;
+    height: 1140px;
+    width: 1440px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 50px;
+    box-shadow: -20px 20px 20px 0 rgba(0, 0, 0, 0.5);
+}
+
+
+h1{
+    
+    border: 2px solid black;
+    font-size: 70px;
+    font-weight: 400;
+    font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
+}
+
+.head{
+    padding-right: 750px;
+    margin-top: 20px;
+    margin-right: 60px;
 }
 
 h3{
-    justify-content: center;
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 100%;
-    padding-right: 50%;
+    font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 25px;
+    font-weight: 100;
+    padding-right: 750px;
+    margin-right: 60px;
+
 
 }
 
+
+button{
+    justify-content: left;
+    margin-top: 20px;
+    width: 100px;
+}
+
+
 .foto1{
+    
     border: 2px solid brown;
-    display: flex;
     width: 400px;
     border-radius: 10px;
+
     
     
+}
+
+
+.foto2{
+
+}
+
+
+.galeriainferior{
+    display: flex;
+
+}
+
+
+.foto3{
+
+}
+
+
+.foto4{
+
+}
+
+
+.foto5{
+
 }
