--- a/PROTOTIPOS/Prototipo1/style.css
+++ b/PROTOTIPOS/Prototipo1/style.css
@@ -26,8 +26,6 @@ body {
 
 
 h1{
-    
-    border: 2px solid black;
     font-size: 70px;
     font-weight: 400;
     font-family:  system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -55,41 +53,54 @@ button{
     justify-content: left;
     margin-top: 20px;
     width: 100px;
+    background-color: rgb(0, 0, 0);
+    border-radius: 15px;
+    padding: 10px;
+    color: white;
 }
 
-
+    
 .foto1{
-    
-    border: 2px solid brown;
-    width: 400px;
-    border-radius: 10px;
-
-    
-    
+    width: 300px;
+    margin-left: 500px;
+    margin-top: -450px;
+    border-radius: 20px;
+   
 }
 
 
 .foto2{
-
+    border: 2px solid rgb(175, 12, 12);
+    width: 550px;
+    margin-left: 900px;
+    margin-top: -350px;
+    border-radius: 20px;
 }
 
 
 .galeriainferior{
     display: flex;
+    justify-content: space-between;
+  
 
 }
 
 
-.foto3{
 
+.foto3{
+   width: 400px;
+   margin-top: 200px;
 }
 
 
 .foto4{
-
+    width: 100px;
+    margin-top: -150px;
 }
 
 
-.foto5{
 
+.foto5{
+    width: 100px;
+    margin-top: -150px;
 }
