--- a/PROTOTIPOS/Prototipo2/style.css
+++ b/PROTOTIPOS/Prototipo2/style.css
@@ -57,6 +57,6 @@ button{
     padding-top: 18px;
     padding-bottom: 18px;
     background-color: #252525;
-    color: rgb(217, 0, 0); 
+    color: white; 
 }
 
